# futhark

./: .gitignore  .travis.yml  build_versions.sh  cabal.config  futhark.cabal  package.yaml
benchmarking/: README.org  benchmark_bfs.sh  benchmark_radix_sort.sh  bfs0.txt  bfs0_rodinia.txt
docs/: conf.py
rts/csharp/: exceptions.cs  memory.cs  opencl.cs  panic.cs  reader.cs  scalar.cs
src/: futhark-cs.hs  futhark-csopencl.hs
src/Futhark/CodeGen/Backends/: CSOpenCL.hs  GenericCSharp.hs
src/Futhark/CodeGen/Backends/CSOpenCL/: Boilerplate.hs
src/Futhark/CodeGen/Backends/GenericCSharp/: AST.hs  Options.hs
src/Futhark/Optimise/Fusion/: LoopKernel.hs
src/Futhark/Representation/Kernels/: Simplify.hs
src/Futhark/Representation/SOACS/: Simplify.hs
src/Language/Futhark/: Syntax.hs
src/Language/Futhark/Parser/: Lexer.x  Parser.y
